--- a/bot/docker-compose.yml
+++ b/bot/docker-compose.yml
@@ -8,18 +8,18 @@ services:
       - URL_SITE_JDR=http://planning.unionrolistes.fr/
       - BOT_PLANING_VERSION=x.x.x
     volumes:
-      - ../Bot_Planning_python/bot/bot/extends/:/app/extends/planing/:ro
+      - ${PWD}/../Bot_Planning_python/bot/bot/extends/:/app/extends/planing/:ro
   api:
     environment:
       - JDR_CHANNEL=871823753108152331
       #- LOGO_URL=
       - URL_SITE_PLANNING=http://planning.unionrolistes.fr
     volumes:
-      - ../Bot_Planning_python/bot/api/extends/:/app/extends/api/:ro
+      - ${PWD}/../Bot_Planning_python/bot/api/extends/:/app/extends/api/:ro
   php:
     volumes:
-      - ../Bot_Planning_python/bot/web/www/:/var/www/html/Web_Planning/:rw
-      - ../Bot_Planning_python/bot/web/vhost/100-UR_Planning.conf:/etc/apache2/sites-enabled/100-UR_Planning.conf:ro
+      - ${PWD}/../Bot_Planning_python/bot/web/www/:/var/www/html/Web_Planning/:rw
+      - ${PWD}/../Bot_Planning_python/bot/web/vhost/100-UR_Planning.conf:/etc/apache2/sites-enabled/100-UR_Planning.conf:ro
     environment:
       - CLIENT_ID=1052883609750605895 # for oauth2 discord
       - CLIENT_SECRET=g_CV54TN7_yx25B4hxqO_Br4WsraUxXl # for oauth2 discord
